2008-09-14 Reorganized cbook and mlab methods related to numerical
	   calculations that have little to do with the goals of those two
	   modules into a separate module numerical_methods.py 
	   Also, added ability to select points and stop point selection
	   with keyboard in ginput and manual contour labeling code.
	   Finally, fixed contour labeling bug. - DMK

2008-09-11 Fix backtick in Postscript output. - MGD

2008-09-10 [ 2089958 ] Path simplification for vector output backends
           Leverage the simplification code exposed through
           path_to_polygons to simplify certain well-behaved paths in
           the vector backends (PDF, PS and SVG).  "path.simplify"
           must be set to True in matplotlibrc for this to work.  -
           MGD

2008-09-10 Add "filled" kwarg to Path.intersects_path and
           Path.intersects_bbox. - MGD

2008-09-07 Changed full arrows slightly to avoid an xpdf rendering
           problem reported by Friedrich Hagedorn. - JKS

2008-09-07 Fix conversion of quadratic to cubic Bezier curves in PDF
           and PS backends. Patch by Jae-Joon Lee. - JKS

2008-09-06 Added 5-point star marker to plot command - EF

2008-09-05 Fix hatching in PS backend - MGD

2008-09-03 Fix log with base 2 - MGD

2008-09-01 Added support for bilinear interpolation in
           NonUniformImage; patch by Gregory Lielens. - EF

2008-08-28 Added support for multiple histograms with data of
           different length - MM

2008-08-28 Fix step plots with log scale - MGD

2008-08-28 Fix masked arrays with markers in non-Agg backends - MGD

2008-08-28 Fix clip_on kwarg so it actually works correctly - MGD

2008-08-25 Fix locale problems in SVG backend - MGD

2008-08-22 fix quiver so masked values are not plotted - JSW

2008-08-18 improve interactive pan/zoom in qt4 backend on windows - DSD

2008-08-11 Fix more bugs in NaN/inf handling.  In particular, path simplification